--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+numpy==1.24.4
+opencv-python-headless==4.9.0.80  # avoids libGL issues
+numba==0.56.4
 absl-py==2.2.2
 accelerate==1.6.0
 aiohappyeyeballs==2.6.1
@@ -39,8 +42,6 @@ multidict==6.4.3
 multiprocess==0.70.16
 networkx==3.4.2
 nltk==3.9.1
-numba==0.61.2
-numpy==2.2.5
 nvidia-cublas-cu12==12.6.4.1
 nvidia-cuda-cupti-cu12==12.6.80
 nvidia-cuda-nvrtc-cu12==12.6.77
