--- a/requirements.txt
+++ b/requirements.txt
@@ -1,99 +1,24 @@
-numpy==1.24.4
-opencv-python-headless==4.9.0.80  # avoids libGL issues
-numba==0.56.4
-absl-py==2.2.2
-accelerate==1.6.0
-aiohappyeyeballs==2.6.1
-aiohttp==3.11.18
-aiosignal==1.3.2
-annotated-types==0.7.0
-anyio==4.9.0
-async-timeout==5.0.1
-attrs==25.3.0
-bert-score==0.3.13
-bitsandbytes==0.41.0
-certifi==2025.4.26
-charset-normalizer==3.4.1
-click==8.1.8
-contourpy==1.3.2
-cycler==0.12.1
-datasets==3.5.1
-dill==0.3.8
-exceptiongroup==1.2.2
-fastapi==0.115.12
-filelock==3.18.0
-fonttools==4.57.0
-frozenlist==1.6.0
-fsspec==2025.3.0
-h11==0.16.0
-httptools==0.6.4
-huggingface-hub==0.30.2
-idna==3.10
-Jinja2==3.1.6
-joblib==1.4.2
-kiwisolver==1.4.8
-llvmlite==0.44.0
-lxml==5.4.0
-MarkupSafe==3.0.2
-matplotlib==3.10.1
-more-itertools==10.7.0
-mpmath==1.3.0
-multidict==6.4.3
-multiprocess==0.70.16
-networkx==3.4.2
-nltk==3.9.1
-nvidia-cublas-cu12==12.6.4.1
-nvidia-cuda-cupti-cu12==12.6.80
-nvidia-cuda-nvrtc-cu12==12.6.77
-nvidia-cuda-runtime-cu12==12.6.77
-nvidia-cudnn-cu12==9.5.1.17
-nvidia-cufft-cu12==11.3.0.4
-nvidia-cufile-cu12==1.11.1.6
-nvidia-curand-cu12==10.3.7.77
-nvidia-cusolver-cu12==11.7.1.2
-nvidia-cusparse-cu12==12.5.4.2
-nvidia-cusparselt-cu12==0.6.3
-nvidia-nccl-cu12==2.26.2
-nvidia-nvjitlink-cu12==12.6.85
-nvidia-nvtx-cu12==12.6.77
-openai-whisper==20240930
-packaging==25.0
-pandas==2.2.3
-pillow==11.2.1
-propcache==0.3.1
-psutil==7.0.0
-pyarrow==20.0.0
-pydantic==2.11.4
-pydantic_core==2.33.2
-pyparsing==3.2.3
-python-dateutil==2.9.0.post0
-python-docx==1.1.2
-python-dotenv==1.1.0
-python-multipart==0.0.20
-pytz==2025.2
-PyYAML==6.0.2
-regex==2024.11.6
-requests==2.32.3
-rouge_score==0.1.2
-safetensors==0.5.3
-sentencepiece==0.2.0
-six==1.17.0
-sniffio==1.3.1
-starlette==0.46.2
-sympy==1.14.0
-tiktoken==0.9.0
-tokenizers==0.21.1
-torch==2.7.0
-tqdm==4.67.1
-transformers==4.51.3
-triton==3.3.0
-typing-inspection==0.4.0
-typing_extensions==4.13.2
-tzdata==2025.2
-urllib3==2.4.0
-uvicorn==0.34.2
-uvloop==0.21.0
-watchfiles==1.0.5
-websockets==15.0.1
-xxhash==3.5.0
-yarl==1.20.0
+# FastAPI web framework
+fastapi==0.110.1
+
+# ASGI server
+hypercorn==0.16.0
+
+# Multipart support for file uploads
+python-multipart==0.0.9
+
+# Audio transcription (OpenAI Whisper)
+openai-whisper==20231117
+ffmpeg-python==0.2.0
+
+# Document generation
+python-docx==1.1.0
+
+# LLM-based report generation
+transformers==4.40.2
+torch==2.3.0
+accelerate==0.30.1
+safetensors==0.4.3
+
+# General utilities
+requests==2.31.0
